--- a/dog-writer/backend/requirements.txt
+++ b/dog-writer/backend/requirements.txt
@@ -9,7 +9,7 @@ python-jose[cryptography]==3.4.0
 passlib[bcrypt]==1.7.4
 PyJWT==2.8.0
 bcrypt==4.2.1
-cryptography>=3.4.8,<42.0.0
+cryptography>=42.0.2
 
 # Input validation and sanitization
 bleach==6.2.0
