--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -32,8 +32,12 @@ google-generativeai==0.7.2
 # Database (PostgreSQL only - production ready)
 psycopg2-binary==2.9.9
 
+# Redis for production rate limiting (distributed state)
+redis==5.0.1
+
 # Templating (for email/HTML if needed)
 jinja2==3.1.6
 
 # Performance monitoring (lightweight)
 psutil==6.1.0
+redis==5.0.1
