--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,11 @@
     "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^6.30.1",
+    "react-router-dom": "^6.30.2",
     "sanitize-html": "^2.17.0"
+  },
+  "overrides": {
+    "@remix-run/router": "1.23.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
